src/style/index.css
body {
    background-color: black;
    color: white;
    min-height: 100vh;
    font-size: 16px;
    font-family: 'SongTi-regular';
    min-width: 1300px;
    line-height: 1.8em;
    width: 100vw;
    overflow-x: hidden;
}

table {
    border-collapse: collapse;
    width: 100%;
}

th,
td {
    border: 1px solid #fff;
    /* 设置表格边框颜色为白色 */
    padding: 8px;
    text-align: center;
}


/* 横向布局 */
.horizontal-layout {
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: row;
}

/* 纵向布局 */
.vertical-layout {
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: column;
}

/* 两侧边距 */
.sides-margin {
    margin: 0 25px;
}

/* 导航栏 */
#navbar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
    text-align: center;
    padding: 15px;
    display: none;
    justify-content: center;
    /* 将子元素左对齐和居中 */
    align-items: center;
    font-size: 20px;
    z-index: 10;
    /* 垂直居中 */
}

.menu-icon {
    float: left;
    margin-left: 10px;
    /* 调整左边距 */
}

#menu-text {
    /* margin-left: -50px; */
    width: 350px;
    margin-left: 49%;
    transform: translate(-50%, 0);
}


section {
    margin-top: 100px;
}

/* 侧边栏 */
#left-menu {
    position: fixed;
    top: 0;
    left: 0;
    width: 230px;
    height: 100%;
    background-color: black;
    color: white;
    padding: 15px;
    flex-direction: column;
    justify-content: left;
    font-size: 20px;
    z-index: 10;
    box-shadow: 5px 0 20px rgba(255, 255, 255, 0.25);
    animation-duration: 1s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: both;
    display: flex;
}

.visible {
    animation-name: slideIn;
}

.hidden {
    animation-name: slideOut;
}


@keyframes slideIn {
    from {
        transform: translateX(-110%);
    }

    to {
        transform: translateX(0);
    }
}

@keyframes slideOut {
    from {
        transform: translateX(0);
    }

    to {
        transform: translateX(-110%);
    }
}


#left-menu a {
    margin: 10px;
    text-align: left;
}

#left-menu img {
    width: fit-content;
    margin-bottom: 50px;
}

/* 推荐按钮 */
#recommend-text{
    position: absolute; 
    bottom: 0; 
    left: 100px;
    z-index: 99;
    cursor: pointer;
    margin-bottom: 30px;
}

#left-menu div {
    margin: 50px 10px 10px 10px;
    text-align: left;
    cursor: pointer;
}

/* 弹窗 */
#reference-popup {
    display: none;
    position: fixed;
    top: 50%;
    left: 50%;
    width: 750px;
    height: 500px;
    transform: translate(-50%, -50%);
    padding: 20px;
    z-index: 9999;
    border-radius: 20px;
    border: 1px solid white;
    background-color: #000;
    color: #fff;
}

/* 背景遮罩样式 */
.overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 9998;
}

#popup-close-btn {
    font-size: 40px;
    cursor: pointer;
}

/* 参考文献 */
#reference-container {
    width: 100%;
    text-align: left;
}

#reference-container .title {
    font-size: 20px;
    margin: 70px 70px 0 70px;
}

#reference-container .info {
    font-size: 14px;
    margin: 0 70px;
}

.dataset-btn{
    position: absolute; 
    bottom: 0; 
    z-index: 99;
    cursor: pointer;
    margin-bottom: 30px;
}

.cover {
    min-height: 700px;
    width: 100vh;
}

/* 封面部分 */
#cover-title-img {
    position: absolute;
    top: 300px;
    left: 100px;
    width: 50%;
    z-index: 2;
}


#cover-subtitle-div {
    font-size: 35px;
    color: white;
    position: absolute;
    left: 100px;
    top: 450px;
    z-index: 2;
}

#cover-bg1 {
    position: absolute;
    top: 50px;
    left: 100px;
    width: 900px;
    z-index: -1;
}

#cover-bg2 {
    position: absolute;
    top: -800px;
    right: -650px;
    width: 1600px;
}

#cover-bg3 {
    position: absolute;
    top: -400px;
    right: -400px;
    width: 800px;
    animation: rotateAnimation 30s linear infinite;
}

#cover-bg4 {
    position: absolute;
    top: -450px;
    right: -450px;
    width: 1200px;
    animation: rotateAnimation 30s linear infinite;
}

/* 向下探索的闪动按钮 */
#down-wrap {
    position: absolute;
    top: 80%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    animation: blink 4s infinite;
}


.page-scroll {
    font-size: 20px;
    text-align: center;
    text-decoration: none;
    /* 去除下划线 */
    color: white;
    /* 设置字体颜色为白色 */
}

@keyframes blink {
    0% {
        opacity: 1;
    }

    50% {
        opacity: 0.2;
    }

    100% {
        opacity: 1;
    }
}

/* 引入部分 */
.intro-outer-wrap {
    width: 100%;
    align-items: center;
    justify-content: center;
    display: flex;
}

#intro-wrap {
    max-width: 620px;
    opacity: 0;
    -webkit-transform: scale(0.9);
    -moz-transform: scale(0.9);
    -ms-transform: scale(0.9);
    -o-transform: scale(0.9);
    transform: scale(0.9);
    -webkit-transition: all 1s ease-in-out;
    -moz-transition: all 1s ease-in-out;
    -ms-transition: all 1s ease-in-out;
    -o-transition: all 1s ease-in-out;
    transition: all 1s ease-in-out;
}


#intro-wrap.visible {
    opacity: 1;
    -webkit-transform: none;
    -moz-transform: none;
    -ms-transform: none;
    -o-transform: none;
    transform: none;
}

.intro-text {
    margin-left: 50px;
    margin-top: -20px;
}

/* 点点繁星，你我其名 */
.headline-wrap {
    margin-top: 100px;
    margin-bottom: 100px;
    width: 100%;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: column;
    padding-top: 100px;
}

.headline-title {
    font-size: 53px;
    margin-top: -230px;
    max-width: 600px;
    margin-bottom: 40px;
    font-weight: bolder;
}

.headline-icon {
    margin-left: -580px;
}

.part-icon {
    margin-top: 100px;
}

.part-title {
    font-size: 24px !important;
    margin-bottom: 50px;
    margin-top: 15px;
}
/* ... */

